# autobiz

./: .dockerignore  .env.example  .gitignore  DATABASE_SETUP.md  Dockerfile  Dockerfile.dev  Procfile  README.md  config.py  db_setup.py  docker-compose.yml  drop_tables.py  fake-data.py  fsm.py  init.sql  main.py  models.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml
agents/: frontline.py  product.py  upselling.py
backend/: alembic.ini  main.py  struct.py
backend/alembic/: env.py
backend/alembic/versions/: e6b198cdef0c_initial_migration.py
backend/chatbot/: constants.py
backend/chatbot/agents/: agent_models_init.py  bot.py  business_agent.py  business_chat_interface.py  business_function_args_schema.py  central_agent.py  central_agent_utils.py  customer_complaint_agent.py  function_args_schema.py  logistics_agent.py  marketing_agent.py  payment_verification_agent.py  product_agent.py  sales_marketing_agent.py  tools.py  upselling_agent.py  user_chat_interface.py  user_function_args_schema.py
backend/chatbot/prompts/: central_agent_prompt.py  prompt.py  (+5 more)
backend/core/: config.py  database.py
backend/db/: cache.py  cache_utils.py  config.py  database.py  db_utils.py  fake-data.py  fake_data.py  init_db.py  models.py  schemas.py
backend/tests/: adversarial_messages.py  test_main.py
backend/whatsapp/: routers.py  utils.py
docker/dev/: Dockerfile  docker-compose.yml
docker/postgres/: init-user-db.sh
dummy_data/: Business_table.csv  donrey_fashion.csv  junae_cosmetics.csv  manny_gadgets.csv
services/: __init__.py  db.py
(+13 files in other folders)
