[project]
name = "autobiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.13",
    "openai>=1.91.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]
